runners/bookmarks: re-add per thread db connection

Partially reverts commit 59983ac0dcf77362adfe5b4b2df298c3f53467e9.
Create new connection for each thread, instead of sharing one connection.

When using the search field in the overview effect with multiple
monitors, there are multiple instances of the same runner in the same
process. Previously, these different instances used the same db
connection from different threads, causing the crash in BUG 479315.
According to Qt documentation, "A connection can only be used from
within the thread that created it. Moving connections between threads or
creating queries from a different thread is not supported."
(https://doc.qt.io/qt-6/threads-modules.html#threads-and-the-sql-module)

BUG: 479315